Fixed display on mobile for temperature conversions

--- a/static/style.css
+++ b/static/style.css
@@ -119,8 +119,8 @@ div.about{
   display:inline;
 }
 
-#tempInput{
-
+.temperatureStuff{
+  margin-bottom: 10px;
 }
 
 
